--- a/printerTest/app/src/main/res/layout/actionbar_main.xml
+++ b/printerTest/app/src/main/res/layout/actionbar_main.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_alignParentEnd="true"
-        android:text="搜索"
+        android:text="蓝牙"
         android:textColor="#ffffff"
         android:textSize="20sp"/>
 </RelativeLayout>
