--- a/printerTest/app/src/main/res/layout/activity_login.xml
+++ b/printerTest/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,8 @@
 
     <RelativeLayout
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="270dp"
+        android:layout_marginTop="200dp"
         android:layout_centerInParent="true">
 
         <TextView
@@ -17,7 +18,8 @@
             android:layout_height="wrap_content"
             android:text="@string/app_name"
             android:textColor="@color/primary"
-            android:textSize="100sp" />
+            android:textSize="70sp"
+            android:layout_centerHorizontal="true"/>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/txt_edit_layout"
