首页动态申请权限

--- a/printerTest/app/src/main/res/layout/activity_main.xml
+++ b/printerTest/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
+
             <RelativeLayout
                 android:id="@+id/layout_up"
                 android:layout_width="match_parent"
@@ -21,6 +23,27 @@
                 android:background="@color/design_default_color_primary"
                 android:focusable="true"
                 android:focusableInTouchMode="true">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp">
+                    <TextView
+                        android:text="当前蓝牙："
+                        android:gravity="center_vertical"
+                        android:layout_width="wrap_content"
+                        android:layout_height="35dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_toLeftOf="@+id/tv_main_bluetooth"
+                        android:layout_toStartOf="@+id/tv_main_bluetooth" />
+                    <TextView
+                        android:gravity="center_vertical"
+                        android:layout_marginRight="5dp"
+                        android:layout_alignParentRight="true"
+                        android:text="未连接蓝牙"
+                        android:layout_width="wrap_content"
+                        android:layout_height="35dp"
+                        android:id="@+id/tv_main_bluetooth" />
+                </RelativeLayout>
 
                 <EditText
                     android:id="@+id/main_search"
