--- a/printerTest/app/src/main/res/layout/actionbar_bluelist.xml
+++ b/printerTest/app/src/main/res/layout/actionbar_bluelist.xml
@@ -4,12 +4,19 @@
     android:layout_height="match_parent">
 
 
+    <ImageView
+        android:id="@+id/pic"
+        android:layout_alignParentStart="true"
+        android:layout_centerInParent="true"
+        android:layout_width="25dp"
+        android:layout_height="30dp"
+        android:src="@drawable/ic_action_bar_back"/>
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="选择客户"
+        android:text="打印机列表"
         android:textColor="#ffffff"
         android:textSize="20sp"/>
     <TextView
@@ -18,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_alignParentEnd="true"
-        android:text="蓝牙"
+        android:text="搜索"
         android:textColor="#ffffff"
         android:textSize="20sp"/>
 </RelativeLayout>
