--- a/printerTest/app/src/main/res/layout/dialog_clinet.xml
+++ b/printerTest/app/src/main/res/layout/dialog_clinet.xml
@@ -138,7 +138,7 @@
                 <android.support.design.widget.TextInputEditText
                     android:lines="1"
                     android:id="@+id/txt_edit_unit"
-                    android:inputType="number"
+                    android:inputType="text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"/>
@@ -156,7 +156,7 @@
                 <android.support.design.widget.TextInputEditText
                     android:lines="1"
                     android:id="@+id/txt_edit_floor"
-                    android:inputType="number"
+                    android:inputType="text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"/>
@@ -174,7 +174,7 @@
                 <android.support.design.widget.TextInputEditText
                     android:lines="1"
                     android:id="@+id/txt_edit_room"
-                    android:inputType="number"
+                    android:inputType="text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"/>
